--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -17,4 +17,11 @@
       <p class="article-content">{{ object.content }}</p>
     </div>
   </article>
+  <footer class="card-footer">
+    <div class="" id='like-sections'>
+      {%include 'Blog/like_sections.html'%}
+
+    </div>
+
+  </footer>
 {% endblock content %}
