--- a/Blog/templates/Blog/search_result.html
+++ b/Blog/templates/Blog/search_result.html
@@ -1,6 +1,6 @@
 {% extends "Blog/base.html" %}
 {% block content %}
-    {% for post in posts %}
+    {% for post in object_list %}
         <article class="media content-section">
           <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
           <div class="media-body">
@@ -11,9 +11,6 @@
             <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
           </div>
-          <footer>
-            
-          </footer>
         </article>
     {% endfor %}
     {% if is_paginated %}
