--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -1,7 +1,7 @@
 {% extends "Blog/base.html" %}
 {% block content %}
     {% for post in posts %}
-        <article class="media content-section">
+        <article class="bg-light media content-section">
           <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
           <div class="media-body">
             <div class="article-metadata">
@@ -12,7 +12,7 @@
             <p class="article-content">{{ post.content }}</p>
           </div>
           <footer>
-            
+
           </footer>
         </article>
     {% endfor %}
