--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -24,7 +24,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-2" href="{% url 'Blog-home' %}">Start Now</a>
+          <!--<a class="navbar-brand mr-2" href="{% url 'Blog-home' %}">Start Now</a>-->
           <form class="navbar mr-auto"action="{% url 'search-result' %}" method="get">
             <input name="q" type="text" placeholder="Search...">
           </form>
