--- a/Blog/templates/Blog/about.html
+++ b/Blog/templates/Blog/about.html
@@ -1,4 +1,10 @@
 {%extends "Blog/base.html"%}
 {%block content%}
 <h1>Blog About</h1>
+<p class="media content-section">
+  This is Aksh Sharma Blog.
+  To join us register to your self to site and login.
+  Stick with us to learn new and new thing.
+  Come on peeps Lets do it.
+            <marquee><b>StartNow</b></marquee>
 {%endblock content%}
