--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -1,6 +1,6 @@
 body {
   background-image: url("https://images.unsplash.com/photo-1495195129352-aeb325a55b65?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: 100%;
   color: #333333;
   margin-top: 5rem;
