--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -73,7 +73,7 @@
                 <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="{% url 'register'%}">Register</a></li>
                 <li class="list-group-item list-group-item-light"><a class="list-group-item-light " href="{% url 'login' %}">Login</a></li>
                 <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="{% url 'post-create' %}">Start Now</a></li>
-                <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="#">Have fun</a></li>
+                <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="https://vestio.serveo.net">Have fun</a></li>
               </ul>
             </p>
           </div>
