--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -19,6 +19,14 @@
     {% else %}
         <title>Aksh Blog</title>
     {% endif %}
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-7735857230681159",
+        enable_page_level_ads: true
+      });
+    </script>
 </head>
 <body>
     <header class="site-header">
