--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     {% if title %}
-        <title>Aksh Blog - {{ title }}</title>
+        <title>{{ title }}</title>
     {% else %}
         <title>Aksh Blog</title>
     {% endif %}
