--- a/Blog/templates/Blog/about.html
+++ b/Blog/templates/Blog/about.html
@@ -3,7 +3,7 @@
 <h1>Blog About</h1>
 <p class="media content-section">
   This is Aksh Sharma Blog.
-  To join us register to your self to site and login.
+  To join us register to our site and login.
   Stick with us to learn new and new thing.
   Come on peeps Lets do it.
             <marquee><b>StartNow</b></marquee>
