--- a/Projects/static/base.css
+++ b/Projects/static/base.css
@@ -1,14 +1,12 @@
 body {
-  background-image: url("https://images.unsplash.com/photo-1495195129352-aeb325a55b65?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
-  background-repeat: repeat;
-  background-size: 100%;
+  background-color: #f5f5f5
   color: #333333;
   margin-top: 5rem;
 }
 
 .content-section {
   border: 2px solid #dddddd;
-  border-radius: 7px;
+  border-radius: 10px;
   margin-top: 20px;
   padding: 15px;
   margin-bottom: 20px;
@@ -17,6 +15,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: #444444;
+  font-family: Verdana;
 }
 
 ul {
