--- a/Projects/templates/Projects/main.html
+++ b/Projects/templates/Projects/main.html
@@ -9,8 +9,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'Projects/base.css' %}">
-
     <!-- icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -19,6 +17,121 @@
     {% else %}
         <title>StartNow</title>
     {% endif %}
+
+    <style media="screen">
+      body {
+        background-color: #f5f5f5
+        color: #333333;
+        margin-top: 5rem;
+      }
+
+      .content-section {
+        border: 2px solid #dddddd;
+        border-radius: 10px;
+        margin-top: 20px;
+        padding: 15px;
+        margin-bottom: 20px;
+        box-shadow: 10px 15px 20px;
+      }
+
+      h1, h2, h3, h4, h5, h6 {
+        color: #444444;
+        font-family: Verdana;
+      }
+      b{
+        color: #000000;
+      }
+      ul {
+        margin: 0;
+      }
+
+      .bg-steel {
+        background-color: #5f788a;
+      }
+
+      .site-header .navbar-nav .nav-link {
+        color: #cbd5db;
+      }
+
+      .site-header .navbar-nav .nav-link:hover {
+        color: #ffffff;
+      }
+
+      .site-header .navbar-nav .nav-link.active {
+        font-weight: 500;
+      }
+
+      .article-title {
+        color: #444444;
+      }
+
+      a.article-title:hover {
+        color: #428bca;
+        text-decoration: none;
+      }
+
+      .article-content {
+        white-space: pre-line;
+      }
+
+      .article-img {
+        height: 65px;
+        width: 65px;
+        margin-right: 16px;
+      }
+
+      .article-metadata {
+        padding-bottom: 1px;
+        margin-bottom: 4px;
+        border-bottom: 1px solid #e3e3e3
+      }
+
+      .article-metadata a:hover {
+        color: #333;
+        text-decoration: none;
+      }
+
+      .article-svg {
+        width: 25px;
+        height: 25px;
+        vertical-align: middle;
+      }
+
+      .account-img {
+        height: 125px;
+        width: 125px;
+        margin-right: 20px;
+        margin-bottom: 16px;
+      }
+
+      .account-heading {
+        font-size: 2.5rem;
+      }
+
+      .code {
+        text-align: center;
+        position: relative;
+        display: inline-block;
+      }
+
+      .code .tooltiptext {
+        visibility: hidden;
+        width: 120px;
+        background-color: black;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+
+        position: absolute;
+        z-index: 1;
+      }
+
+      .code:hover .tooltiptext {
+        visibility: visible;
+      }
+    </style>
+
 </head>
 <body>
     <header class="site-header">
