--- a/Projects/templates/Projects/mitmdoit.html
+++ b/Projects/templates/Projects/mitmdoit.html
@@ -24,6 +24,11 @@
      <br><br><div class="code card bg-dark text-white">
        <div class="card-body">urlsnarf -i [Network interface name] </div><span class = "tooltiptext">Copy it!</span></div>
      </li>
+     <li class="list-group-item"><h2>Dsniff</h2><br>
+       To sniff out authentication information like user credentials.
+     <br><br><div class="code card bg-dark text-white">
+       <div class="card-body">dsniff </div><span class = "tooltiptext">Copy it!</span></div>
+     </li>
      <li class="list-group-item"><h2>Departing</h2><br>
      Once you are done with your attack (you don't want to sniff anymore), remember to disable the packet forwarding in the system again executing the following command on a terminal:
      <br><br><div class="code card bg-dark text-white">
