--- a/Projects/templates/Projects/main.html
+++ b/Projects/templates/Projects/main.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- google adsense -->
+    <script data-ad-client="ca-pub-7735857230681159" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
