--- a/Projects/templates/Projects/projectlist.html
+++ b/Projects/templates/Projects/projectlist.html
@@ -1,12 +1,12 @@
 {% extends  'Projects/main.html'%}
 {%block cont%}
-<article class="bg-light media content-section">
+<article class="bg-light content-section">
  <div class="media-body">
    <u><h2>MenInMiddleAttack</h2></u>
    <p>A man-in-the-middle attack is a type of cyberattack where a malicious actor inserts him/herself into a conversation between two parties, impersonates both parties and gains access to information that the two parties were trying to send to each other. A man-in-the-middle attack allows a malicious actor to intercept, send and receive data meant for someone else, or not meant to be sent at all, without either outside party knowing until it is too late. Man-in-the-middle  attacks can be abbreviated in many ways, including MITM, MitM, MiM or MIM.</p>
    <br>
    <hr>
-    <img class="mx-auto d-block" src="/media/profile_pics/mim.png" alt="">
+    <img class="mx-auto d-block" src="https://redlion.co.ke/wp-content/uploads/2018/04/man-in-the-middle-mitm.jpg" alt="">
    <br>
    <hr>
    <p>A man-in-the-middle attacker can sit between a user and the website they want to visit, and collect their username and password. This can be done by targeting the HTTP connection between the user and the website; hijacking this connection lets an attacker act as a proxy, collecting and modifying information being sent between the user and the site. Alternately the attacker can steal a user’s cookies (small pieces of data created by a website and stored on a user’s  computer for identification and other purposes). These stolen cookies can be used to hijack a user’s session, letting an attacker impersonate that user on the site.<br>
