--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -33,13 +33,13 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{% url 'Blog-home' %}">New Queries</a>
+              <a class="nav-item nav-link" href="{% url 'Blog-home' %}">Home</a>
               <a class="nav-item nav-link" href="{% url 'Blog-about' %}">About</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'post-create' %}">AskQuestion</a>
+                <a class="nav-item nav-link" href="{% url 'post-create' %}">Post</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
@@ -72,7 +72,7 @@
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="{% url 'register'%}">Register</a></li>
                 <li class="list-group-item list-group-item-light"><a class="list-group-item-light " href="{% url 'login' %}">Login</a></li>
-                <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="{% url 'post-create' %}">AskQuestion</a></li>
+                <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="{% url 'post-create' %}">Post</a></li>
                 <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="#">Have fun</a></li>
               </ul>
             </p>
