--- a/Blog/templates/Blog/about.html
+++ b/Blog/templates/Blog/about.html
@@ -1,10 +1,8 @@
 {%extends "Blog/base.html"%}
 {%block content%}
-<h1>Blog About</h1>
-<p class="media content-section">
-  This is Aksh Sharma Blog.
-  To join us register to our site and login.
-  Stick with us to learn new and new thing.
-  Come on peeps Lets do it.
-            <marquee><b>StartNow</b></marquee>
+<h1>About Us</h1>
+<p class="name content-section">
+  I'm nitian <br>
+  <small class="ml-3">- The Annonymous User</small>
+  <marquee><b>StartNow</b></marquee>
 {%endblock content%}
