--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -13,7 +13,8 @@
 
     <!-- icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <!-- fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Averia Gruesa Libre' rel='stylesheet'>
     {% if title %}
         <title>{{ title }}</title>
     {% else %}
@@ -22,7 +23,7 @@
 </head>
 <body>
     <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container">
           <!--<a class="navbar-brand mr-2" href="{% url 'Blog-home' %}">Start Now</a>-->
           <form class="navbar mr-auto"action="{% url 'search-result' %}" method="get">
@@ -39,7 +40,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'post-create' %}">Post</a>
+                <a class="nav-item nav-link" href="{% url 'post-create' %}">Add Story</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
@@ -64,7 +65,7 @@
           {% block content %}{% endblock %}
         </div>
         <div class="col-md-4">
-          <div class="bg-info content-section">
+          <div style="background: #c1d3d6" class="content-section">
               <h3>
                   Hola Peeps!
               </h3>
@@ -72,7 +73,7 @@
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="{% url 'register'%}">Register</a></li>
                 <li class="list-group-item list-group-item-light"><a class="list-group-item-light " href="{% url 'login' %}">Login</a></li>
-                <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="{% url 'post-create' %}">Post</a></li>
+                <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="{% url 'post-create' %}">Add Story</a></li>
                 <li class="list-group-item list-group-item-light"><a class="list-group-item-light" href="#">Have fun</a></li>
               </ul>
             </p>
