--- a/Blog/templates/Blog/user_posts.html
+++ b/Blog/templates/Blog/user_posts.html
@@ -1,16 +1,19 @@
 {% extends "Blog/base.html" %}
 {% block content %}
-    <h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+    <h1 class="mb-3">Stories by {{ view.kwargs.username }}</h1>  <!-- ({{ page_obj.paginator.count }}) -->
     {% for post in posts %}
         <article class="media content-section">
           <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
+              <a class="mr-2 name" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
               <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
             </div>
             <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
+          </div>
+          <div class="text-muted">
+            <p><small>Likes : {{post.total_likes}} &nbsp; Coments : {{post.comment_set.count}}</small></p>
           </div>
         </article>
     {% endfor %}
